; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_ssp.c_ssp_write_word.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-pxa/extr_ssp.c_ssp_write_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssp_dev = type { %struct.ssp_device* }
%struct.ssp_device = type { i64 }

@TIMEOUT = common dso_local global i32 0, align 4
@SSSR = common dso_local global i64 0, align 8
@SSSR_TNF = common dso_local global i32 0, align 4
@ETIMEDOUT = common dso_local global i32 0, align 4
@SSDR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ssp_write_word(%struct.ssp_dev* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ssp_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.ssp_device*, align 8
  %7 = alloca i32, align 4
  store %struct.ssp_dev* %0, %struct.ssp_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.ssp_dev*, %struct.ssp_dev** %4, align 8
  %9 = getelementptr inbounds %struct.ssp_dev, %struct.ssp_dev* %8, i32 0, i32 0
  %10 = load %struct.ssp_device*, %struct.ssp_device** %9, align 8
  store %struct.ssp_device* %10, %struct.ssp_device** %6, align 8
  %11 = load i32, i32* @TIMEOUT, align 4
  store i32 %11, i32* %7, align 4
  br label %12

12:                                               ; preds = %30, %2
  %13 = load %struct.ssp_device*, %struct.ssp_device** %6, align 8
  %14 = getelementptr inbounds %struct.ssp_device, %struct.ssp_device* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @SSSR, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @__raw_readl(i64 %17)
  %19 = load i32, i32* @SSSR_TNF, align 4
  %20 = and i32 %18, %19
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  br i1 %22, label %23, label %32

23:                                               ; preds = %12
  %24 = load i32, i32* %7, align 4
  %25 = add nsw i32 %24, -1
  store i32 %25, i32* %7, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %23
  %28 = load i32, i32* @ETIMEDOUT, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %3, align 4
  br label %40

30:                                               ; preds = %23
  %31 = call i32 (...) @cpu_relax()
  br label %12

32:                                               ; preds = %12
  %33 = load i32, i32* %5, align 4
  %34 = load %struct.ssp_device*, %struct.ssp_device** %6, align 8
  %35 = getelementptr inbounds %struct.ssp_device, %struct.ssp_device* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* @SSDR, align 8
  %38 = add nsw i64 %36, %37
  %39 = call i32 @__raw_writel(i32 %33, i64 %38)
  store i32 0, i32* %3, align 4
  br label %40

40:                                               ; preds = %32, %27
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i32 @__raw_readl(i64) #1

declare dso_local i32 @cpu_relax(...) #1

declare dso_local i32 @__raw_writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
